--- a/index.html
+++ b/index.html
@@ -3,43 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iOS Developer Portfolio</title>
+    <title>NoiseZen - Focus & Relaxation App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>iOS Developer</p>
+        <img src="noisezen-icon.png" alt="NoiseZen App Icon" class="hero-icon">
+        <h1>NoiseZen</h1>
+        <p class="tagline">Your Personal Sound Sanctuary</p>
+        <div class="cta-buttons">
+            <a href="#" class="app-store-link">Download on the App Store</a>
+        </div>
     </header>
 
     <main>
-        <section class="about">
-            <h2>About Me</h2>
-            <p>I'm an iOS developer passionate about creating intuitive and impactful mobile experiences using SwiftUI.</p>
-        </section>
-
-        <section class="projects">
-            <h2>My Apps</h2>
-            <div class="project-card">
-                <img src="noisezen-icon.png" alt="NoiseZen App Icon">
-                <h3>NoiseZen</h3>
-                <p>Description of your NoiseZen app - what it does, its key features, and the technologies used (SwiftUI, iOS 17+, etc.)</p>
-                <div class="project-links">
-                    <a href="#" class="app-store-link">View on App Store</a>
-                    <!-- Add GitHub link if it's open source -->
+        <section class="features">
+            <h2>Features</h2>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <h3>Curated Sound Library</h3>
+                    <p>Discover a vast collection of high-quality ambient sounds, from nature to white noise.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Custom Sound Mixing</h3>
+                    <p>Create your perfect atmosphere by combining multiple sounds with individual volume control.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Focus Timer</h3>
+                    <p>Boost your productivity with built-in focus sessions and sound scheduling.</p>
                 </div>
             </div>
         </section>
 
+        <section class="screenshots">
+            <h2>Experience NoiseZen</h2>
+            <div class="screenshot-gallery">
+                <!-- Add your app screenshots here -->
+                <img src="screenshot1.png" alt="NoiseZen Screenshot 1">
+                <img src="screenshot2.png" alt="NoiseZen Screenshot 2">
+                <img src="screenshot3.png" alt="NoiseZen Screenshot 3">
+            </div>
+        </section>
+
         <section class="contact">
-            <h2>Contact</h2>
-            <p>Get in touch:</p>
+            <h2>Support</h2>
+            <p>Have questions or feedback? We'd love to hear from you!</p>
             <ul>
-                <li><a href="https://github.com/YOUR_USERNAME">GitHub</a></li>
-                <li><a href="https://linkedin.com/in/YOUR_USERNAME">LinkedIn</a></li>
-                <li><a href="mailto:your.email@example.com">Email</a></li>
+                <li><a href="mailto:support@noisezen.app">Email Support</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Use</a></li>
             </ul>
         </section>
     </main>
+
+    <footer>
+        <p>© 2024 NoiseZen. All rights reserved.</p>
+    </footer>
 </body>
 </html> 
