better landing page

--- a/index.html
+++ b/index.html
@@ -3,87 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NoiseZen - Focus & Relaxation App</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Apps Portfolio</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header>
-        <nav class="top-nav">
-            <a href="#features">Features</a>
-            <a href="#support">Support</a>
-            <a href="#download" class="cta-button">Download</a>
-        </nav>
-        
-        <div class="hero">
-            <img src="noisezen/icon.png" alt="NoiseZen App Icon" class="hero-icon">
-            <h1>NoiseZen</h1>
-            <p class="tagline">Your Personal Sound Sanctuary</p>
-            <p class="hero-description">Transform any space into your perfect focus environment with customizable ambient sounds</p>
-            <div class="cta-buttons">
-                <a href="#" class="app-store-link">Download on the App Store</a>
-            </div>
-        </div>
+    <nav class="top-nav">
+        <a href="#apps">Apps</a>
+        <a href="https://github.com/mike123789-dev" class="cta-button">GitHub</a>
+    </nav>
+
+    <header class="hero">
+        <h1>My iOS Apps</h1>
+        <p class="hero-description">Crafting delightful mobile experiences with SwiftUI</p>
     </header>
 
     <main>
-        <section id="features" class="features">
-            <h2>Features</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <h3>Curated Sound Library</h3>
-                    <p>Discover a vast collection of high-quality ambient sounds, from nature to white noise.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>Custom Sound Mixing</h3>
-                    <p>Create your perfect atmosphere by combining multiple sounds with individual volume control.</p>
-                </div>
-                <div class="feature-card">
-                    <h3>Focus Timer</h3>
-                    <p>Boost your productivity with built-in focus sessions and sound scheduling.</p>
+        <div class="app-grid">
+            <div class="app-card">
+                <img src="noisezen/icon.png" alt="NoiseZen App Icon" class="app-icon">
+                <div class="app-info">
+                    <h2>NoiseZen</h2>
+                    <p class="app-description">Your Personal Sound Sanctuary</p>
+                    <div class="app-links">
+                        <a href="noisezen/index.html" class="learn-more">Learn More</a>
+                    </div>
                 </div>
             </div>
-        </section>
-
-        <section class="benefits">
-            <div class="benefit-content">
-                <h2>Why NoiseZen?</h2>
-                <ul class="benefits-list">
-                    <li>✨ Premium sound quality</li>
-                    <li>🎯 Scientifically proven focus enhancement</li>
-                    <li>🔄 Regular content updates</li>
-                    <li>⚡️ Minimal battery usage</li>
-                    <li>🌙 Perfect for work, study, or sleep</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="screenshots">
-            <h2>Experience NoiseZen</h2>
-            <div class="screenshot-gallery">
-                <!-- Add your app screenshots here -->
-                <img src="noisezen/screenshot1.png" alt="NoiseZen Screenshot 1">
-                <img src="noisezen/screenshot2.png" alt="NoiseZen Screenshot 2">
-                <img src="noisezen/screenshot3.png" alt="NoiseZen Screenshot 3">
-            </div>
-        </section>
-
-        <section id="support" class="support">
-            <h2>Support & Resources</h2>
-            <div class="support-grid">
-                <div class="support-card">
-                    <h3>Contact Us</h3>
-                    <p>Need assistance? Our support team is here to help.</p>
-                    <a href="mailto:rkdqudals123@icloud.com" class="support-link">Email Support →</a>
-                </div>
-            </div>
-        </section>
+            <!-- Add more app cards here -->
+        </div>
     </main>
 
     <footer>
-        <div class="social-links">
-            <a href="https://github.com/mike123789-dev">GitHub</a>
+        <div class="footer-content">
+            <div class="social-links">
+                <a href="https://github.com/mike123789-dev">GitHub</a>
+            </div>
+            <p class="copyright">© 2024. All rights reserved.</p>
         </div>
-        <p class="copyright">© 2024 NoiseZen. All rights reserved.</p>
     </footer>
 </body>
-</html> 
+</html>
