fix landing page

--- a/noisezen/index.html
+++ b/noisezen/index.html
@@ -15,7 +15,7 @@
         </nav>
         
         <div class="hero">
-            <img src="noisezen/icon.png" alt="NoiseZen App Icon" class="hero-icon">
+            <img src="icon.png" alt="NoiseZen App Icon" class="hero-icon">
             <h1>NoiseZen</h1>
             <p class="tagline">Your Personal Sound Sanctuary</p>
             <p class="hero-description">Transform any space into your perfect focus environment with customizable ambient sounds</p>
@@ -61,9 +61,9 @@
             <h2>Experience NoiseZen</h2>
             <div class="screenshot-gallery">
                 <!-- Add your app screenshots here -->
-                <img src="noisezen/screenshot1.png" alt="NoiseZen Screenshot 1">
-                <img src="noisezen/screenshot2.png" alt="NoiseZen Screenshot 2">
-                <img src="noisezen/screenshot3.png" alt="NoiseZen Screenshot 3">
+                <img src="screenshot1.png" alt="NoiseZen Screenshot 1">
+                <img src="screenshot2.png" alt="NoiseZen Screenshot 2">
+                <img src="screenshot3.png" alt="NoiseZen Screenshot 3">
             </div>
         </section>
 
