update styles.css, index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="social-links">
                 <a href="https://github.com/mike123789-dev">GitHub</a>
             </div>
+            <a href="privacy/index.html" class="footer-link">Privacy Policy</a>
             <p class="copyright">© 2024. All rights reserved.</p>
         </div>
     </footer>
