--- a/privacy/index.html
+++ b/privacy/index.html
@@ -33,7 +33,7 @@
             <p>NoiseZen operates entirely on your device. Any settings or preferences you configure are stored locally on your device and are not transmitted to our servers.</p>
 
             <h2>Third-Party Services</h2>
-            <p>Our app does not integrate with any third-party services that collect data.</p>
+            <p>Our app integrates with Firebase, which may collect data as described in their privacy policy. We do not control the data collected by Firebase.</p>
 
             <h2>Children's Privacy</h2>
             <p>Our app is safe for users of all ages as we do not collect any personal information from anyone, including children under 13.</p>
@@ -43,7 +43,7 @@
 
             <h2>Contact Us</h2>
             <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-            <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p><a href="mailto:rkdqudals123@icloud.com">rkdqudals123@icloud.com</a></p>
         </section>
     </main>
 
